--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,31 +1,8 @@
+#login-form-container {
+  padding: 30px;
+  height: 100%;
+}
 
-.login-form {
-    max-width: 500px;
-    height: auto;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    margin-top: -200px;
-    margin-left: -250px;
-    position: absolute;
-    -webkit-box-shadow: 2px 2px 28px -7px rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 2px 28px -7px rgba(0,0,0,0.75);
-    box-shadow: 2px 2px 28px -7px rgba(0,0,0,0.75);
-    border-radius: 20px;
-  }
-  
-  .login-header {
-    background-color: #B2EBF2;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  
-  .login-container {
-      width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    padding: 20px 20px 20px 20px;
-  }
-  
+#form-container {
+  height: 100%;
+}
