Create User without validation

--- a/src/app/corporate/content/user/add-modal/corporate-user-add-modal.component.html
+++ b/src/app/corporate/content/user/add-modal/corporate-user-add-modal.component.html
@@ -3,5 +3,26 @@
   <mat-form-field>
     <input matInput placeholder="Username" formControlName="username" />
   </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Company Name" formControlName="company" />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Department" formControlName="department" />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Join Date" formControlName="joinDate" />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Name" formControlName="name" />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Birthday" formControlName="birthday" />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Gender" formControlName="gender" />
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="JLPT" formControlName="jlpt" />
+  </mat-form-field>
   <button mat-button color="primary">Submit</button>
 </form>
