--- a/src/app/corporate/corporate.component.html
+++ b/src/app/corporate/corporate.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" id="admin-container">
+<div fxLayout="row" id="corporate-container">
   <div fxFlex="15" id="sidebar-container">
     <app-corporate-sidebar></app-corporate-sidebar>
   </div>
