--- a/src/app/corporate/corporate.component.scss
+++ b/src/app/corporate/corporate.component.scss
@@ -4,10 +4,12 @@
 
 #sidebar-container {
   height: 100%;
+  background-color: cadetblue;
   padding: 10px;
 }
 
 #content-container {
   height: 100%;
+  background-color: aliceblue;
   padding: 10px;
 }
