--- a/src/app/admin/sidebar/admin-sidebar.component.html
+++ b/src/app/admin/sidebar/admin-sidebar.component.html
@@ -1,3 +1,4 @@
 <div fxLayout="column">
   <app-admin-sidebar-item *ngFor="let item of items" [item]="item"></app-admin-sidebar-item>
+  <a routerLink="/login" href="">Logout</a>
 </div>
