--- a/src/app/corporate/sidebar/corporate-sidebar.component.html
+++ b/src/app/corporate/sidebar/corporate-sidebar.component.html
@@ -1,3 +1,4 @@
 <div fxLayout="column">
   <app-corporate-sidebar-item *ngFor="let item of items" [item]="item"></app-corporate-sidebar-item>
+  <a routerLink="/login" href="">Logout</a>
 </div>
