Renew login and sidebar

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,21 @@
+<div class="is-auth">
 <form [formGroup]="loginForm" id="login-form-container" fxLayout="column" fxFlexAlign="center"
       (submit)="login()">
-  <div fxFlex="33"></div>
-  <div fxLayout="column" id="form-container">
-    <div fxLayout="row" fxFlexAlign="center">
-      <mat-form-field>
-        <mat-label>Username</mat-label>
-        <input matInput placeholder="Username" formControlName="username">
-      </mat-form-field>
-    </div>
-
-    <div fxLayout="row" fxFlexAlign="center">
-      <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input matInput placeholder="Password" type="password" formControlName="password">
-      </mat-form-field>
-    </div>
-
-    <div fxLayout="row" fxFlexAlign="center">
-      <button type="submit" mat-button color="primary">LOGIN</button>
-    </div>
-  </div>
-  <div fxFlex="33"></div>
-</form>
+   <div class="form-heading">
+     <h1>GAB ADMIN</h1>
+   </div>
+   <div class="form-body">
+     <div class="form-group has-feedback">
+       <input name="email" required type="email" placeholder="Enter Email" class="form-control" formControlName="username">
+       <span class="fa fa-envelope form-control-feedback text-muted"></span>
+     </div>
+     <div class="form-group has-feedback">
+       <input name="password" required type="password" placeholder="Password" class="form-control" formControlName="password">
+       <span class="fa fa-lock form-control-feedback text-muted"></span>
+     </div>
+     <button type="submit" class="btn btn-block btn-primary mt-lg">
+       Login
+     </button>
+   </div>
+ </form>
+</div>
