--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -3,13 +3,13 @@
 }
 
 #sidebar-container {
-  background-color: darkslategray;
+  background-color: #5d9cec;
   height: 100%;
   padding: 10px;
 }
 
 #content-container {
-  background-color: aquamarine;
+  background-color: #f7f7f8;
   height: 100%;
   padding: 10px;
 }
