--- a/src/app/admin/sidebar/admin-sidebar.component.html
+++ b/src/app/admin/sidebar/admin-sidebar.component.html
@@ -1,3 +1,14 @@
-<div fxLayout="column">
-  <app-admin-sidebar-item *ngFor="let item of items" [item]="item"></app-admin-sidebar-item>
-</div>
+<div class="logo">
+        <a class="simple-text" routerLink="/admin" routerLinkActive="active">
+            <div class="logo-img">
+                <img src="./assets/logo.png">
+            </div>
+            N5 Dashboard
+        </a>
+    </div>
+
+<aside class="aside">
+  <div class="aside-inner">
+    <app-admin-sidebar-item *ngFor="let item of items" [item]="item"></app-admin-sidebar-item>
+  </div>
+</aside>
