--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,6 @@ html, body {
   height: 100%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.mat-dialog-container{
+	padding : 0 !important;
+}
