--- a/src/app/admin/content/user/admin-user.component.html
+++ b/src/app/admin/content/user/admin-user.component.html
@@ -1,5 +1,23 @@
-<div *ngIf="!loading">
-  <app-admin-user-card *ngFor="let user of users" [user]="user"></app-admin-user-card>
+<div class="panel panel-default animated fadeInRight">
+  <div>
+    <div>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover">
+          <thead>
+          <tr>
+            <th>Username</th>
+            <th>Name</th>
+            <th>Operation</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr app-admin-user-table-row *ngFor="let user of users"></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
+
 <mat-progress-spinner *ngIf="loading"></mat-progress-spinner>
 <app-admin-user-add-button id="add-button" (onClick)="openAddDialog()"></app-admin-user-add-button>
