Making User Page
Making User Page

--- a/src/app/corporate/content/home/admin-home.component.html
+++ b/src/app/corporate/content/home/admin-home.component.html
@@ -13,7 +13,7 @@
           <!-- <span *ngIf="amount.photo != undefined">{{amount.photo}}</span> -->
           <span>160</span>
         </div>
-        <div class="text-uppercase">User Management GABasdasd</div>
+        <div class="text-uppercase">User Management</div>
       </div>
       <div class="h-75"></div>
     </div>
