--- a/src/app/admin/content/home/admin-home.component.html
+++ b/src/app/admin/content/home/admin-home.component.html
@@ -1,65 +1,86 @@
 <div class="content-wrapper">
-	  	<div class="content-heading">
-		  Assets Amount
-		</div>
-  	</div>
-<div class="row animated zoomIn amount">
-  <div class="col-lg-3 col-sm-6" routerLink="/dashboard/photo">
-    <!-- START widget-->
-    <div class="panel bg-primary-light pt b0 widget">
-      <div class="ph">
-        <em class="fa fa-picture-o fa-2x pull-right"></em>
-        <div class="h2 mt0">
-          <!-- <span *ngIf="amount.photo != undefined">{{amount.photo}}</span> -->
-          <span>160</span>
-        </div>
-        <div class="text-uppercase">User Management GABasdasd</div>
-      </div>
-      <div class="h-75"></div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-sm-6" routerLink="/dashboard/music">
-    <!-- START widget-->
-    <div class="panel widget bg-purple-light pt b0 widget">
-      <div class="ph">
-        <em class="fa fa-music fa-2x pull-right"></em>
-        <div class="h2 mt0">
-          <!-- <span *ngIf="amount.music != undefined">{{amount.music}}</span> -->
-          <span>172</span>
-        </div>
-        <div class="text-uppercase">User Management Corporate</div>
-      </div>
-      <div class="h-75"></div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6 col-sm-12" routerLink="/dashboard/video">
-    <!-- START widget-->
-    <div class="panel widget bg-info-light pt b0 widget">
-      <div class="ph">
-        <em class="fa fa-video-camera fa-2x pull-right"></em>
-        <div class="h2 mt0">
-          <!-- <span *ngIf="amount.video != undefined">{{amount.video}}</span> -->
-          <span>1022</span>
-        </div>
-        <div class="text-uppercase">Data GAB</div>
-      </div>
-      <div class="h-75"></div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6 col-sm-12" routerLink="/dashboard/story">
-    <!-- START widget-->
-    <div class="panel widget bg-success-light pt b0 widget">
-      <div class="ph">
-        <em class="fa fa-book fa-2x pull-right"></em>
-        <div class="h2 mt0">
-          <!-- <span *ngIf="amount.story != undefined">{{amount.story}}</span> -->
-          <span>988</span>
-        </div>
-        <div class="text-uppercase">Corporate Data</div>
-      </div>
-      <div class="h-75"></div>
-    </div>
+<div class="panel panel-default animated fadeInRight">
+<div>
+<div>
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover">
+      <thead>
+      <tr>
+        <th>No</th>
+        <th>UserName</th>
+        <th>Email</th>
+        <th>CreatedAt</th>
+        <th>Note</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>1</td>
+        <td>Naruto</td>
+        <td>naruto_uzumaki@konoha.com</td>
+        <td>2018-06-06</td>
+        <td>I like ramen</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Sakura</td>
+        <td>sakura_haruno@konoha.com</td>
+        <td>2018-06-06</td>
+        <td>I like flowers</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Sasuke</td>
+        <td>sasuke_uchiha@konoha.com</td>
+        <td>2018-06-06</td>
+        <td>I like tomato</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
+</div>
+</div>
 
-
+<div class="panel panel-default animated fadeInRight">
+<div>
+<div>
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover">
+      <thead>
+      <tr>
+        <th>No</th>
+        <th>UserName</th>
+        <th>Email</th>
+        <th>CreatedAt</th>
+        <th>Note</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>1</td>
+        <td>Rock Lee</td>
+        <td>rocklee@konoha.com</td>
+        <td>2018-06-06</td>
+        <td>I like ramen</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Tenten</td>
+        <td>tenten@konoha.com</td>
+        <td>2018-06-06</td>
+        <td>I like flowers</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Kiba</td>
+        <td>kiba@konoha.com</td>
+        <td>2018-06-06</td>
+        <td>I like tomato</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+</div>
+</div>
