--- a/src/app/admin/content/user/admin-user.component.html
+++ b/src/app/admin/content/user/admin-user.component.html
@@ -1,23 +1,41 @@
-<div class="panel panel-default animated fadeInRight">
-  <div>
-    <div>
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          <thead>
-          <tr>
-            <th>Username</th>
-            <th>Name</th>
-            <th>Operation</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr app-admin-user-table-row *ngFor="let user of users"></tr>
-          </tbody>
-        </table>
-      </div>
+<div class="row op animated fadeInRight">
+    <div class="col-sm-10">
+      <span>Search:&nbsp;&nbsp;</span>
+      <input type="text" class="form-control search">
+    </div>
+    <div class="col-sm-2">
+      <button type="button" class="btn btn-success" (click)="openAddDialog()">
+        <i class="fa fa-plus"></i> Create</button>
     </div>
   </div>
-</div>
-
-<mat-progress-spinner *ngIf="loading"></mat-progress-spinner>
-<app-admin-user-add-button id="add-button" (onClick)="openAddDialog()"></app-admin-user-add-button>
+  <div class="panel panel-default animated fadeInRight">
+    <div>
+      <div>
+        <div class="table-responsive">
+          <table class="table table-bordered table-hover">
+            <thead>
+            <tr>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Email</th>
+              <th>Operation</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let user of users; let i of index ">
+              <td>{{ user.username }}</td>
+              <td>{{ user.username }}</td>
+              <td>{{ user.username }}</td>
+              <td>
+                <span class="op-col">
+                  <a class="text-warning" title="Edit"><i class="fas fa-edit" (click)="openEditDialog(i)"></i></a>
+                  <a class="text-danger"  title="Delete" (click)="openDeleteDialog(i)"><i class="fas fa-trash"></i></a>
+                </span>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+  </div>
+  </div>
