--- a/src/app/admin/content/user/admin-user.component.scss
+++ b/src/app/admin/content/user/admin-user.component.scss
@@ -3,3 +3,22 @@
   bottom: 30px;
   right: 30px;
 }
+.op {
+  padding: 10px 0;
+  margin: 10px 0;
+  background-color:#fff;
+  overflow:hidden;
+}
+.op >div {
+  display: flex;
+  align-items:center;
+  margin: 10px 0;
+}
+.op-col {
+  display: flex;
+  align-items: center;
+  font-size: 20px !important;
+}
+.op-col a:not(:first-child) {
+margin-left: 10px;
+}
