--- a/src/app/admin/content/user/admin-user.component.html
+++ b/src/app/admin/content/user/admin-user.component.html
@@ -29,7 +29,7 @@
               <td>
                 <span class="op-col">
                   <a class="text-warning" title="Edit"><i class="fas fa-edit" (click)="openEditDialog(i)"></i></a>
-                  <a class="text-danger"  title="Delete" (click)="openDeleteDialog(i)"><i class="fas fa-trash"></i></a>
+                  <a class="text-danger"  title="Delete" (click)="clickMethod('name')"><i class="fas fa-trash"></i></a>
                 </span>
               </td>
             </tr>
