--- a/src/app/admin/content/user/add-modal/admin-user-add-modal.component.html
+++ b/src/app/admin/content/user/add-modal/admin-user-add-modal.component.html
@@ -4,13 +4,10 @@
    </div>
    <div class="form-body">
      <div class="form-group has-feedback">
-       <input name="email" required type="email" placeholder="Enter First Name" class="form-control" formControlName="firstname">
+       <input name="name" required type="text" placeholder="Enter Name" class="form-control" formControlName="name">
      </div>
      <div class="form-group has-feedback">
-       <input name="email" required type="email" placeholder="Enter Last Name" class="form-control" formControlName="lastname">
-     </div>
-     <div class="form-group has-feedback">
-       <input name="email" required type="email" placeholder="Enter Email" class="form-control" formControlName="email">
+       <input name="email" required type="email" placeholder="Enter Email" class="form-control" formControlName="username">
      </div>
      <button type="submit" class="btn btn-block btn-primary mt-lg">
        Create
