--- a/src/app/admin/content/user/edit-modal/admin-user-edit-modal.component.html
+++ b/src/app/admin/content/user/edit-modal/admin-user-edit-modal.component.html
@@ -1,38 +1,16 @@
-<form class="panel panel-defaultform-horizontal animated fadeInRight" [formGroup]="newUserForm" (submit)="submit()">
-  <div class="panel-heading bg-primary"><span>Edit User</span></div>
-
-  	<div>
-      <div class="panel-body">
-        <fieldset>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">First Name *</label>
-            <div class="col-sm-10">
-              <input type="text" name="name" required class="form-control">
-            </div>
-          </div>
-        </fieldset>
-
-        <fieldset>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Last Name *</label>
-            <div class="col-sm-10">
-              <input type="text" name="author" required class="form-control">
-            </div>
-          </div>
-        </fieldset>
-
-        <fieldset>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Email *</label>
-            <div class="col-sm-10">
-              <input type="text" name="album" required class="form-control">
-            </div>
-          </div>
-        </fieldset>
+    <form [formGroup]="newEditForm" (submit)="submit()">
+        <div class="form-heading">
+        <h1>Edit Corporate</h1>
       </div>
-      <div class="panel-footer">
-        <button type="submit" class="btn btn-primary" [class.btn-warning]="editing">Save</button>
-        <button type="reset" class="btn btn-danger" routerLink="/admin/gab">Cancel</button>
+      <div class="form-body">
+        <div class="form-group has-feedback">
+          <input name="name" required type="text" placeholder="Enter Name" [(ngModel)]="user.name" class="form-control" formControlName="name">
+        </div>
+        <div class="form-group has-feedback">
+          <input name="email" required type="email" placeholder="Enter Email" [(ngModel)]="user.username" class="form-control" formControlName="username">
+        </div>
+        <button type="submit" class="btn btn-block btn-primary mt-lg">
+          Create
+        </button>
       </div>
-    </div>
-</form>
+   </form>
