--- a/src/app/admin/content/user/edit-modal/admin-user-edit-modal.component.html
+++ b/src/app/admin/content/user/edit-modal/admin-user-edit-modal.component.html
@@ -4,10 +4,16 @@
       </div>
       <div class="form-body">
         <div class="form-group has-feedback">
-          <input name="name" required type="text" placeholder="Enter Name" [(ngModel)]="user.name" class="form-control" formControlName="name">
+          <input name="name" required type="text" placeholder="Enter Name" [ngModel]="user.name" class="form-control" formControlName="name">
         </div>
         <div class="form-group has-feedback">
-          <input name="email" required type="email" placeholder="Enter Email" [(ngModel)]="user.username" class="form-control" formControlName="username">
+          <input name="status" required type="email" placeholder="Enter Email" [ngModel]="user.username" class="form-control" formControlName="username">
+        </div>
+        <div class="form-group has-feedback">
+          <select name="status" required type="status" placeholder="Enter Status" [ngModel]="user.status" class="form-control" formControlName="status">
+            <option value="1">Active</option>
+            <option value="0">Non Active</option>
+          </select>
         </div>
         <button type="submit" class="btn btn-block btn-primary mt-lg">
           Create
