--- a/src/app/admin/content/home/admin-home.component.html
+++ b/src/app/admin/content/home/admin-home.component.html
@@ -2,38 +2,34 @@
 <div class="panel panel-default animated fadeInRight">
 <div>
 <div>
+<div class="form-heading">
+  <h1>Total Students</h1>
+</div>
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead>
       <tr>
-        <th>No</th>
-        <th>UserName</th>
-        <th>Email</th>
-        <th>CreatedAt</th>
-        <th>Note</th>
+        <th>Age</th>
+        <th>Total</th>
+        <th>Average</th>
+        <th>Male</th>
+        <th>Female</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td>1</td>
-        <td>Naruto</td>
-        <td>naruto_uzumaki@konoha.com</td>
-        <td>2018-06-06</td>
-        <td>I like ramen</td>
+        <td>18-20</td>
+        <td>12</td>
+        <td>16</td>
+        <td>7</td>
+        <td>4</td>
       </tr>
       <tr>
+        <td>21-25</td>
+        <td>14</td>
+        <td>23</td>
+        <td>12</td>
         <td>2</td>
-        <td>Sakura</td>
-        <td>sakura_haruno@konoha.com</td>
-        <td>2018-06-06</td>
-        <td>I like flowers</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Sasuke</td>
-        <td>sasuke_uchiha@konoha.com</td>
-        <td>2018-06-06</td>
-        <td>I like tomato</td>
       </tr>
       </tbody>
     </table>
@@ -45,38 +41,29 @@
 <div class="panel panel-default animated fadeInRight">
 <div>
 <div>
+<div class="form-heading">
+  <h1>Total Corporates</h1>
+</div>
   <div class="table-responsive">
     <table class="table table-bordered table-hover">
       <thead>
       <tr>
-        <th>No</th>
-        <th>UserName</th>
+        <th>Name</th>
         <th>Email</th>
-        <th>CreatedAt</th>
-        <th>Note</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td>1</td>
         <td>Rock Lee</td>
         <td>rocklee@konoha.com</td>
-        <td>2018-06-06</td>
-        <td>I like ramen</td>
       </tr>
       <tr>
-        <td>2</td>
         <td>Tenten</td>
         <td>tenten@konoha.com</td>
-        <td>2018-06-06</td>
-        <td>I like flowers</td>
       </tr>
       <tr>
-        <td>3</td>
         <td>Kiba</td>
         <td>kiba@konoha.com</td>
-        <td>2018-06-06</td>
-        <td>I like tomato</td>
       </tr>
       </tbody>
     </table>
