--- a/src/app/admin/content/user/add-modal/admin-user-add-modal.component.html
+++ b/src/app/admin/content/user/add-modal/admin-user-add-modal.component.html
@@ -9,6 +9,10 @@
      <div class="form-group has-feedback">
        <input name="email" required type="email" placeholder="Enter Email" class="form-control" formControlName="username">
      </div>
+     <div class="form-group has-feedback">
+      <input name="password" required type="password" placeholder="Enter Password" class="form-control" formControlName="password">
+    </div>
+
      <button type="submit" class="btn btn-block btn-primary mt-lg">
        Create
      </button>
