create students page design

--- a/src/app/admin/content/analytic/admin-analytic.component.html
+++ b/src/app/admin/content/analytic/admin-analytic.component.html
@@ -3,19 +3,19 @@
 			<label for="tab1"><span>GOI</span></label>
 
 			<input id="tab2" type="radio" name="tabs">
-			<label for="tab2"><span>Bunpo</span></label>
+			<label for="tab2"><span>BUNPO</span></label>
 
 			<input id="tab3" type="radio" name="tabs">
-			<label for="tab3"><span>Kanji</span></label>
+			<label for="tab3"><span>KANJI</span></label>
 
 			<input id="tab4" type="radio" name="tabs">
-			<label for="tab4"><span>Listening</span></label>
+			<label for="tab4"><span>LISTENING</span></label>
 
 			<input id="tab5" type="radio" name="tabs">
-			<label for="tab5"><span>Reading</span></label>
+			<label for="tab5"><span>READING</span></label>
 
 			<input id="tab6" type="radio" name="tabs">
-			<label for="tab6"><span>Graph</span></label>
+			<label for="tab6"><span>GRAPH</span></label>
 
 			<section id="content1" class="tab-content">
 				<div class="content-wrapper">
@@ -218,50 +218,34 @@
 					    <table class="table table-bordered table-hover">
 					      <thead>
 					      <tr>
-					        <th>Item</th>
 					        <th>Topic</th>
-					        <th>GQ1</th>
-					        <th>GQ2</th>
-					        <th>GQ3</th>
-					        <th>GQ4</th>
+					        <th>Question</th>
+					        <th>Taken by</th>
+					        <th>Passed</th>
 					        <th>Average</th>
-					        <th>Matome Test</th>
-					        <th>Pass Average</th>
 					      </tr>
 					      </thead>
 					      <tbody>
 					      <tr>
-					        <td>Hiragana4</td>
 					        <td>T1</td>
-					        <td>65</td>
+					        <td>Q1</td>
 					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
 					        <td>6.7</td>
 					        <td>7.2</td>
 					      </tr>
 					      <tr>
-					        <td>Katakana4</td>
 					        <td>T1</td>
-					        <td>65</td>
+					        <td>Q1</td>
 					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
 					        <td>6.7</td>
 					        <td>7.2</td>
 					      </tr>
 					      <tr>
-					        <td>Greeting4</td>
 					        <td>T1</td>
-					        <td>65</td>
+					        <td>Q1</td>
 					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>70.7</td>
-					        <td>62.7</td>
-					        <td>73.2</td>
+					        <td>6.7</td>
+					        <td>7.2</td>
 					      </tr>
 					      </tbody>
 					    </table>
@@ -282,50 +266,34 @@
 					    <table class="table table-bordered table-hover">
 					      <thead>
 					      <tr>
-					        <th>Item</th>
 					        <th>Topic</th>
-					        <th>GQ1</th>
-					        <th>GQ2</th>
-					        <th>GQ3</th>
-					        <th>GQ4</th>
+					        <th>Question</th>
+					        <th>Taken by</th>
+					        <th>Passed</th>
 					        <th>Average</th>
-					        <th>Matome Test</th>
-					        <th>Pass Average</th>
 					      </tr>
 					      </thead>
 					      <tbody>
 					      <tr>
-					        <td>Hiragana5</td>
-					        <td>T1</td>
-					        <td>65</td>
+					        <td>T2</td>
+					        <td>Q1</td>
 					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
 					        <td>6.7</td>
 					        <td>7.2</td>
 					      </tr>
 					      <tr>
-					        <td>Katakana5</td>
-					        <td>T1</td>
-					        <td>65</td>
+					        <td>T2</td>
+					        <td>Q1</td>
 					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
 					        <td>6.7</td>
 					        <td>7.2</td>
 					      </tr>
 					      <tr>
-					        <td>Greeting5</td>
-					        <td>T1</td>
-					        <td>65</td>
+					        <td>T2</td>
+					        <td>Q1</td>
 					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>70.7</td>
-					        <td>62.7</td>
-					        <td>73.2</td>
+					        <td>6.7</td>
+					        <td>7.2</td>
 					      </tr>
 					      </tbody>
 					    </table>
