Fix Css For sidebar
Fix Css For sidebar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,9 @@ html, body {
 .mat-dialog-container{
 	padding : 0 !important;
 }
+#sidebar-container{
+  width: 15%;
+}
+#content-container{
+  width: 85%;
+}
