--- a/src/app/corporate/content/user/detail/corporate-detail.component.html
+++ b/src/app/corporate/content/user/detail/corporate-detail.component.html
@@ -15,7 +15,7 @@
               <span class="text_detail">SCHOOL NAME :</span>
             </div>
             <div class="col-md-6 col-xs-6 col-sm-6">
-                <span class="text_detail">ENGLISH LEVEK :</span>
+                <span class="text_detail">ENGLISH LEVEL :</span>
                 <span class="text_detail">STUDY REASON :</span>
             </div>
           </div>
