--- a/src/app/corporate/content/user/detail/corporate-detail.component.scss
+++ b/src/app/corporate/content/user/detail/corporate-detail.component.scss
@@ -23,6 +23,10 @@ span.text_detail {
   color: #fff;
   text-align: center;
 }
+div#content-container {
+  height: 100%;
+  overflow-y: scroll;
+}
 .data{
   display: block;
   font-size: 20px;
