finish the students page filter view

--- a/src/app/admin/content/student/admin-student.component.html
+++ b/src/app/admin/content/student/admin-student.component.html
@@ -99,47 +99,23 @@
 					<div class="panel panel-default animated fadeInRight">
 					  <div class="table-responsive">
 					    <table class="table table-bordered table-hover">
-					      <thead>
-					      <tr>
-					        <th>Overall</th>
-					        <th>Filtered</th>
-					        <th>Graph</th>
-					      </tr>
-					      </thead>
 					      <tbody>
-					      <tr>
-					        <td>Hiragana2</td>
-					        <td>T1</td>
-					        <td>65</td>
-					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
-					        <td>6.7</td>
-					        <td>7.2</td>
-					      </tr>
-					      <tr>
-					        <td>Katakana2</td>
-					        <td>T1</td>
-					        <td>65</td>
-					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>7.7</td>
-					        <td>6.7</td>
-					        <td>7.2</td>
-					      </tr>
-					      <tr>
-					        <td>Greeting2</td>
-					        <td>T1</td>
-					        <td>65</td>
-					        <td>75</td>
-					        <td>70</td>
-					        <td>65</td>
-					        <td>70.7</td>
-					        <td>62.7</td>
-					        <td>73.2</td>
-					      </tr>
+
+							<div class="container">
+								<div class="row">
+									<table border="0" cellpadding="0" cellspacing="0" class="table table-bordered table-striped month">
+							            <tr>
+							                <th colspan="6" class="month-head month">学習時間</th>
+											<th colspan="2" class="month-head month">進捗</th>
+											<th colspan="7" class="month-head month">成績</th>
+											<th colspan="2" class="month-head month">警告</th>
+							            </tr>
+							            <tr><th class="mon text-center"></th><th class="tue text-center">目標</th><th class="wed text-center">累計</th><th class="thu text-center">平均/日</th><th class="fri text-center">目標実行率</th><th class="sat text-center">ログイン回数累計</th><th class="sun text-center">学習課</th><th class="tue text-center">進捗率</th><th class="wed text-center">課</th><th class="thu text-center">語彙</th><th class="fri text-center">漢字</th><th class="sat text-center">文法</th><th class="sun text-center">読解</th><th class="thu text-center">聴解</th><th class="fri text-center">合計</th><th class="sat text-center">回数</th><th class="sun text-center">反応率</th></tr>
+
+							            <tr><th class="mon text-center">15-18</th><th class="tue text-center">data1</th><th class="wed text-center">data2</th><th class="thu text-center">data3</th><th class="fri text-center">data4</th><th class="sat text-center">data5</th><th class="sun text-center">data6</th><th class="tue text-center">data7</th><th class="wed text-center">data8</th><th class="thu text-center">data9</th><th class="fri text-center">data10</th><th class="sat text-center">data11</th><th class="sun text-center">data12</th><th class="thu text-center">data13</th><th class="fri text-center">data14</th><th class="sat text-center">data15</th><th class="sun text-center">data16</th></tr>
+							        </table>
+								</div>
+							</div>
 					      </tbody>
 					    </table>
 					  </div>
