--- a/src/app/corporate/corporate.component.scss
+++ b/src/app/corporate/corporate.component.scss
@@ -4,7 +4,7 @@
 
 #sidebar-container {
   height: 100%;
-  background-color: cadetblue;
+  background-color: rgb(255, 64, 129);
   padding: 10px;
 }
 
