--- a/src/app/corporate/content/user/detail/corporate-detail.component.html
+++ b/src/app/corporate/content/user/detail/corporate-detail.component.html
@@ -9,14 +9,14 @@
       <div class="col-md-10 col-xs-10 col-sm-10 border-black">
           <div class="row">
             <div class="col-md-6 col-xs-6 col-sm-6">
-              <span class="text_detail">NAME :</span>
-              <span class="text_detail">GENDER :</span>
-              <span class="text_detail">LAST EDUCATION :</span>
-              <span class="text_detail">SCHOOL NAME :</span>
+              <span class="text_detail">NAME : {{ users.name }}</span>
+              <span class="text_detail">GENDER : {{ users.gender }}</span>
+              <span class="text_detail">LAST EDUCATION : {{ users.gender }}</span>
+              <span class="text_detail">SCHOOL NAME : {{ users.latestEducationName }}</span>
             </div>
             <div class="col-md-6 col-xs-6 col-sm-6">
-                <span class="text_detail">ENGLISH LEVEL :</span>
-                <span class="text_detail">STUDY REASON :</span>
+                <span class="text_detail">ENGLISH LEVEL : {{ users.englishLevel }}</span>
+                <span class="text_detail">STUDY REASON : {{ users.studyReason }}</span>
             </div>
           </div>
       </div>
