--- a/src/app/corporate/content/user/detail/corporate-detail.component.scss
+++ b/src/app/corporate/content/user/detail/corporate-detail.component.scss
@@ -33,7 +33,7 @@ div#content-container {
 }
 .form-heading {
  padding: 10px 15px;
- background-color: cadetblue;
+ background-color: #ff4081;
  text-align: center;
 }
 
